@@ -1167,5 +1167,59 @@ public abstract class BaseDirectoryTestCase extends LuceneTestCase {
     in.close(); // close again
     dir.close();
   }
-}
 
+  public void testCloneThreadSafety() throws Exception {
+    Directory dir = getDirectory(createTempDir());
+    IndexOutput out = dir.createOutput("randombytes", IOContext.DEFAULT);
+
+    // Write file with at least 20 K random bytes:
+    final int numBytes = atLeast(20*1024);
+    final byte[] bytes = new byte[numBytes];
+    random().nextBytes(bytes);
+    out.writeBytes(bytes, 0, bytes.length);
+    out.close();
+
+    // Then read the bytes back at random seek points from multiple threads:
+    final IndexInput in = dir.openInput("randombytes", IOContext.DEFAULT);
+
+    int numThreads = 4;
+    Thread[] threads = new Thread[numThreads];
+    for(int i=0;i<numThreads;i++) {
+      int finalI = i;
+      threads[i] = new Thread() {
+          @Override
+          public void run() {
+            int numIters = atLeast(1000);
+            byte[] scratch = new byte[numBytes];
+            for(int iter=0;iter<numIters;iter++) {
+              // First thread uses the original IndexInput, all other threads use clone:
+              IndexInput myIn;
+              if (finalI == 0) {
+                myIn = in;
+              } else {
+                myIn = in.clone();
+              }
+              int spot = random().nextInt(numBytes/2);
+              try {
+                myIn.seek(spot);
+                int length = numBytes-spot;
+                myIn.readBytes(scratch, 0, length);
+                for(int i=0;i<length;i++) {
+                  assertEquals(bytes[spot+i], scratch[i]);
+                }
+              } catch (IOException ioe) {
+                throw new RuntimeException(ioe);
+              }
+            }
+          }
+        };
+      threads[i].start();
+    }
+
+    for(Thread thread : threads) {
+      thread.join();
+    }
+    in.close();
+    dir.close();
+  }
+}
